# 2023-lalambda-fpga-labs

./: README.md
lab_day2_02_note_recognition/boards/rzrd/: top.qsf
lab_day2_02_note_recognition/icarus/sim_0/: systemverilog.f
lab_day2_02_note_recognition/questa/sim_0/: c_run_0.sh  compile.sh  g_run_0.sh  wave.tcl
lab_day2_02_note_recognition/src/: inn441_mic_spi_receiver.sv  top.sv
lab_day2_02_note_recognition/src_tb/: sim_inn441.sv  tb.sv
lab_day2_02_note_recognition/vivado/sim_0/: .gitignore  compile.sh  g_run_0.sh  g_run_0.tcl  sim_in441.wcfg  top.wcfg  vivado_pid10351.str  xsim.jou
lab_day3_01_rars/: prepare.sh  run_rars.sh
lab_day3_01_rars/support/: task1.S  task2.S
lab_day3_02_schoolrisc/: .gitignore
lab_day3_02_schoolrisc/boards/rzrd/: .gitignore  top.qsf
lab_day3_02_schoolrisc/doc/: lab_schoolrisk_guide.md  lab_schoolrisk_guide_step1.md  lab_schoolrisk_guide_step2.md  lab_schoolrisk_guide_step3.md
lab_day3_02_schoolrisc/openline/: build.sh
lab_day3_02_schoolrisc/support/: clean.sh  prepare.sh
lab_day4_01_fifo/support/: clean.sh  prepare.sh
lab_ext_svga_abc/boards/rzrd/: top.qsf  x_configure.bash  x_setup.bash
lab_ext_svga_base/src/: top.sv
lab_ext_svga_base/support/: clean.sh  prepare.sh
lab_ext_svga_osc/src/: inmp441_mic_i2s_receiver.sv  osc_mic.sv  systemverilog.f  top.sv  uart_mic.sv  verilog.f
lab_ext_svga_osc/tb/: systemverilog.f  tb.sv
lab_ext_tb_template/doc/: lab_ext_tb_template_guide_step1.md
lab_ext_tb_template/support/: prepare.sh
soft/uart_mic/: CMakeLists.txt
soft/uart_mic/src/: main.cpp  p_show.py
(+108 files in other folders)
